# terminus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
phylip_consensus/: consense
scripts/python/: accuracy_metric_simulation.py  extract_txp_group.py
src/: binary_tree.rs  collapse.rs  main.rs  salmon_types.rs  temp.rs  util.rs
tests/: cli.rs
tests/data/salmon_quant/quant_1/: cmd_info.json
tests/data/salmon_quant/quant_1/aux_info/: ambig_info.tsv
tests/data/salmon_quant/quant_2/: cmd_info.json
tests/data/salmon_quant/quant_2/aux_info/: ambig_info.tsv  meta_info.json
tests/data/terminus_group/quant_1/: clusters.txt  groups.txt  quant.sf  terminus_info.json
tests/data/terminus_group/quant_1/aux_info/: meta_info.json
tests/salmon_quant/quant_1/: lib_format_counts.json  quant.sf
tests/salmon_quant/quant_1/aux_info/: meta_info.json
tests/salmon_quant/quant_2/: lib_format_counts.json  quant.sf
