[package]
name = "terminus"
version = "0.1.0"
authors = ["Rob Patro <rob@cs.umd.edu>", "Hirak Sarka <hirak@cs.umd.edu>"]
edition = "2018"

[dependencies]
GSL = "*"
ndarray = "0.13.0"
ndarray-stats = "0.3.0"
pretty_env_logger = "0.3.1"
clap = "^2.33.0"
log = "^0.4.8"
log4rs = "^0.9.0"
petgraph = "^0.4.13"
nalgebra = "^0.18"
csv = "^1.1.1"
serde = { version = "^1.0.103", features = ["derive"] }
pbr = { git = "https://github.com/a8m/pb", branch = "master" }
flate2 = { version = "1.0.13" }
byteorder = "1.3.2"
serde_json = "^1.0.44"
indicatif = "^0.13.0"
ordered-float = "1.0.2"
sorted-list = "0.2.0"
itertools = "0.8.2"
rand = "0.7.2"
num-format = "0.4.0"
num-traits = "0.2.11"
binary-heap-plus = "0.2.0"
rayon = "1.3.0"
rand_core = "0.5.1"
rand_pcg = "0.2.1"
refinery = { git = "https://github.com/jneem/refinery", branch = "master" }
assert_cmd = "0.12.0"

[features]
default = ["GSL/v2"]

[dev-dependencies]
predicates = "1.0.2"
